[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
daemon-api = { workspace = true }
daemon-common = { workspace = true }
daemon-protocol = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
