[package]
name = "daemon-core-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
daemon-common = { workspace = true }
daemon-core = { workspace = true }
daemon-providers = { workspace = true }
daemon-protocol = { workspace = true }
daemon-api = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
