[package]
name = "daemon-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
daemon-common = { workspace = true }
daemon-core = { workspace = true }
daemon-providers = { workspace = true }
daemon-protocol = { workspace = true }
daemon-api = { workspace = true }
daemon-host = { workspace = true }
daemon-node = { workspace = true }
daemon-store = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
