[package]
name = "daemon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "daemon-cli"
path = "src/main.rs"

[dependencies]
daemon-common = { workspace = true }
daemon-api = { workspace = true }
daemon-host = { workspace = true }
daemon-protocol = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
