[package]
name = "daemon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "daemon-cli"
path = "src/main.rs"

[dependencies]
daemon-common = { workspace = true }
# Panic-only crash reporting for the operator CLI (no native minidump monitor — a short-lived,
# thin client; a Rust panic is the only failure mode worth reporting). A no-op unless a DSN +
# `DAEMON_CRASH_CONSENT=1` are set in the environment.
daemon-telemetry = { workspace = true }
daemon-api = { workspace = true }
daemon-host = { workspace = true }
daemon-protocol = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
