[package]
name = "daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "daemon"
path = "src/main.rs"

[features]
default = []
# Compile + register the CDP `browser` tool (pulls chromiumoxide via `daemon-tool-browser/cdp`).
browser = ["dep:daemon-tool-browser", "daemon-tool-browser/cdp"]
# Compile the OpenTelemetry OTLP trace exporter + GenAI span enrichment. OFF by default; when on,
# the daemon exports session traces to `OTEL_EXPORTER_OTLP_ENDPOINT` (see `daemon-telemetry`).
otel = ["daemon-telemetry/otel", "daemon-core/otel"]

[dependencies]
daemon-common = { workspace = true }
daemon-core = { workspace = true }
# The default context engine (LCM) and memory provider (Mnemosyne) the host wires in as defaults.
daemon-context-lcm = { workspace = true }
daemon-mnemosyne = { workspace = true }
daemon-providers = { workspace = true }
# Only the light `protocol` types (Engine/ModelParams/Sampling) are needed to build a LocalProvider;
# the workspace dep is default-features = false, keeping the engine/ML tree out of the daemon binary.
daemon-infer = { workspace = true }
daemon-host = { workspace = true }
daemon-node = { workspace = true }
# The identity store backing the networked-transport authenticator (`[api]` TLS listener).
daemon-auth = { workspace = true }
# The MeTTa symbolic coprocessor: the supervised client + the `metta` tool. Both pull `daemon-metta`
# default-features = false (wire types only), so `hyperon` never reaches the daemon binary — the
# engine lives entirely in the separately-built worker process.
daemon-metta = { workspace = true }
daemon-metta-client = { workspace = true }
daemon-tool-metta = { workspace = true }
# The Python tool worker client: discovers + proxies tools from the `daemon_pytool` worker process.
# Like the metta client it pulls only the light wire types (`daemon-pytool`); no Python links here.
daemon-pytool-client = { workspace = true }
# The MCP client: connects to external MCP servers and proxies their tools through the same
# `ToolProvider` seam as the Python worker. Opt-in per server via `[[mcp.servers]]`.
daemon-mcp-client = { workspace = true }
# The web tools (`web_search`/`web_extract`); opt-in at runtime via `[web].enable`.
daemon-tool-web = { workspace = true }
# Core chat tools registered on every role: the per-session `todo` planner and the `clarify` ask.
daemon-tool-todo = { workspace = true }
daemon-tool-clarify = { workspace = true }
# The skills subsystem: the store/index (`daemon-skills`) + the `skill_*` tools (`daemon-tool-skill`).
daemon-skills = { workspace = true }
daemon-tool-skill = { workspace = true }
# The `browser` tool; gated behind the `browser` feature so the default build never compiles the
# heavy chromiumoxide CDP bindings.
daemon-tool-browser = { workspace = true, optional = true }
daemon-models = { workspace = true }
daemon-api = { workspace = true }
# Protocol routing primitives (TransportId / IsolationPolicy) for building the §5.9 routing registry
# from the `[routing]` config; already a transitive dep via daemon-host/daemon-api.
daemon-protocol = { workspace = true }
# Optional in-process HTTP/WS surface, toggled on at launch by a configured bind address.
daemon-http = { workspace = true }
# The Matrix chat transport, toggled on at launch by `[matrix].enabled`. It isolates the heavy
# matrix-sdk deps; the daemon binary only references `serve` / `login` / `MatrixConfig`.
daemon-matrix = { workspace = true }
# The internal Rooms loopback transport, toggled on at launch by `[rooms].enabled`. The daemon binary
# only references `serve` / `RoomsConfig`; it reuses the same `daemon-ingest`/`daemon-delivery` halves.
daemon-rooms = { workspace = true }
daemon-credentials = { workspace = true }
daemon-provision = { workspace = true }
daemon-store = { workspace = true, features = ["sqlite"] }
daemon-supervision = { workspace = true }
daemon-telemetry = { workspace = true }
daemon-transport = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Daemon Cloud gateway model discovery (`GET /models`, unauth MVP). Workspace default features
# (json + rustls-tls); no new tree beyond what genai/daemon-models already pull.
reqwest = { workspace = true }
# The node's launch/composition config: layered defaults <- TOML <- env <- CLI, merged into NodeConfig.
# (figment's `toml` feature pulls the TOML parser transitively; the binary no longer uses it directly.)
figment = { workspace = true }
# The daemon CLI grammar (host role default + `matrix login` + internal roles + `config` reference).
clap = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# `figment::Jail` (hermetic, race-free env + temp-file fixtures) for the config-loading tests.
figment = { workspace = true, features = ["test"] }
# Raw SIGTERM/SIGINT delivery in the host-launch graceful-shutdown gate (`tests/host_launch.rs`).
nix = { workspace = true }

[lints]
workspace = true
